[package]
name = "ruresol"
version = "0.4.2"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
hickory-resolver = { version = "*", features = ["system-config", "tokio-runtime"] }
futures = "0.3"
async-stream = "0.3"

[profile.release]
opt-level = 3
debug = true
lto = false
