[package]
name = "ruresol"
version = "0.4.3"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
hickory-resolver = { version = "0.25", features = ["system-config", "tokio",  "https-ring", "webpki-roots"] }
futures = "0.3"
async-stream = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
debug = true
lto = false
